tests/sqlite/ui-common/grouped_section_wrong_width.stderr
error: sql_forge!: grouped section value must provide exactly 2 items
  --> tests/sqlite/tmp-ui/grouped_section_wrong_width.rs:13:37
   |
13 |                 true => ("", "", ""),
   |                                     ^
